# finetuning-learn

./: .gitignore  GUIDE.md  README.md  common.py  pyproject.toml  step1_baseline.py  step2_train.py  step3_evaluate.py  step4_ablation.py  step5_gen_synthetic.py  step6_synthetic_compare.py
data/: job_postings.jsonl  synthetic.jsonl
